# QBDI

./: CMakeLists.txt
MemTracer/: CMakeLists.txt  README  preload.cpp  tracer.cpp  tracer.h
MemTracer/example/: bintree.c
cmake/config/: config-memtracer.sh
